--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Certy</title>
+    <title>迷途切图仔--阿凯先森</title>
     <meta name="description" content="">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -33,7 +33,7 @@
                      <div class="ace-head-row">
                          <div id="ace-head-col1" class="ace-head-col text-left">
                              <a id="ace-logo" class="ace-logo" href="index.html">
-                                <img src="img/uploads/brand/logo.svg" alt="ace resume"><span>.Certy</span>
+                                <span>.陈春凯</span>
                              </a>
                          </div>
                          
@@ -89,19 +89,19 @@
         <article id="ace-card" class="ace-card bg-primary">
 			<div class="ace-card-inner text-center">
 				<img class="avatar avatar-195" src="img/uploads/avatar/avatar-195x195.png" width="195" height="195" alt="">
-				<h1>Ola Lowe</h1>
-				<p class="text-muted">Florist | Decorator</p>
-				<ul class="ace-social clear-list">
+				<h1>陈春凯</h1>
+				<p class="text-muted">高级前端工程师</p>
+				<!-- <ul class="ace-social clear-list">
 					<li><a><span class="ace-icon ace-icon-facebook"></span></a></li>
 					<li><a><span class="ace-icon ace-icon-twitter"></span></a></li>
 					<li><a><span class="ace-icon ace-icon-google-plus"></span></a></li>
 					<li><a><span class="ace-icon ace-icon-instagram"></span></a></li>
 					<li><a><span class="ace-icon ace-icon-pinterest"></span></a></li>
-				</ul>
+				</ul> -->
 			</div>
 
 			<footer class="ace-card-footer">
-				<a class="btn btn-lg btn-block btn-thin btn-upper " href="#">Download Resume</a>
+				<a class="btn btn-lg btn-block btn-thin btn-upper " href="#">简历下载</a>
 			</footer>
 		</article><!-- #ace-card -->
 
@@ -156,9 +156,9 @@
         <section class="section brd-btm">
             <div class="row">
                 <div class="col-sm-12 clear-mrg text-box">
-                    <h2 class="title-lg text-upper">About Me</h2>
+                    <h2 class="title-lg text-upper">关于我</h2>
 
-                    <p><b>Helo, I’m Ola Lowe!</b><br>
+                    <p><b>Helo, 我是切图仔阿凯</b><br>
                         Logo or your Company Name, unless of course you are Microsoft or the Yellow Pages online directorye core of
                         your marketing, the central theme around your products and services.
                         Your brand is not your Logo or your Company Name, unless of course you are Microsoft or the Yellow Pages
@@ -174,32 +174,35 @@
         <section class="section brd-btm">
             <div class="row">
                 <div class="col-sm-6 clear-mrg">
-                    <h2 class="title-thin text-muted">personal information</h2>
+                    <h2 class="title-thin text-muted">个人信息</h2>
 
                     <dl class="dl-horizontal clear-mrg">
-                        <dt class="text-upper">Full Name</dt>
-                        <dd>Ola Maria Lowe</dd>
+                        <dt class="text-upper">姓    名</dt>
+                        <dd>陈春凯</dd>
 
-                        <dt class="text-upper">D.o.b.</dt>
-                        <dd>05 Sep 1986</dd>
+                        <dt class="text-upper">学    历</dt>
+                        <dd>本科</dd>
 
-                        <dt class="text-upper">address</dt>
-                        <dd>24058, Belgium, Brussels,
-                            Liutte 27, BE</dd>
+                        <dt class="text-upper">毕业学校</dt>
+                        <dd>福建工程学院</dd>
 
-                        <dt class="text-upper">e-mail</dt>
-                        <dd><a href="mailto:robertsmith@company.com">robertsmith@company.com</a></dd>
+                        <dt class="text-upper">专业</dt>
+                        <dd>计算机科学与技术</dd>
 
-                        <dt class="text-upper">phone</dt>
-                        <dd>+1 256 254 84 56</dd>
+                        <dt class="text-upper">毕业时间</dt>
+                        <dd>2012/07/01</dd>
 
-                        <dt class="text-upper">freelance</dt>
-                        <dd>Available</dd>
+                        <dt class="text-upper">联系方式</dt>
+                        <dd>156 069 72520</dd>
+
+                        <dt class="text-upper">E-mail</dt>
+                        <dd><a href="mailto:120577840@qq.com">120577840@qq.com</a></dd>
+
                     </dl>
                 </div><!-- .col-sm-6 -->
 
                 <div class="col-sm-6 clear-mrg">
-                    <h2 class="title-thin text-muted">languages</h2>
+                    <h2 class="title-thin text-muted">专业技能</h2>
 
                     <div class="progress-bullets ace-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
                         <strong class="progress-title">English</strong>
@@ -347,17 +350,15 @@
         <section class="section brd-btm">
             <div class="row">
                 <div class="col-sm-12 clear-mrg">
-                    <h2 class="title-thin text-muted">interests</h2>
+                    <h2 class="title-thin text-muted">兴趣爱好</h2>
 
                     <ul class="icon-list icon-list-col3 clearfix">
-                        <li><span class="ace-icon ace-icon-music"></span> North Adella</li>
-                        <li><span class="ace-icon ace-icon-blog"></span> North Adella</li>
-                        <li><span class="ace-icon ace-icon-blog"></span> North Adella</li>
-                        <li><span class="ace-icon ace-icon-blog"></span> North Adella</li>
-                        <li><span class="ace-icon ace-icon-blog"></span> North Adella</li>
-                        <li><span class="ace-icon ace-icon-music"></span> North Adella</li>
-                        <li><span class="ace-icon ace-icon-blog"></span> North Adella</li>
-                        <li><span class="ace-icon ace-icon-blog"></span> North Adella</li>
+                        <li><span class="ace-icon ace-icon-music"></span> 听歌 </li>
+                        <li><span class="ace-icon ace-icon-blog"></span> 打篮球</li>
+                        <li><span class="ace-icon ace-icon-blog"></span> 看书</li>
+                        <li><span class="ace-icon ace-icon-blog"></span> 跑步，骑行</li>
+                        <li><span class="ace-icon ace-icon-blog"></span> 旅游</li>
+                        <li><span class="ace-icon ace-icon-blog"></span> 手工艺制作</li>
                     </ul>
                 </div>
             </div>
@@ -573,7 +574,7 @@
     <footer id="ace-footer" class="ace-container-shift">
         <div class="ace-container">
 			<div class="ace-footer-cont clear-mrg">
-				<p class="text-center">Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>				
+				<p class="text-center">Copyright &copy; 2017.Company name All rights reserved.</p>				
 			</div>
         </div><!-- .ace-container -->
     </footer><!-- #ace-footer -->
@@ -592,7 +593,6 @@
 <script type="text/javascript" src="js/vendor/jquery-1.12.4.min.js"></script>
 
 
-<!---<script type="text/javascript" src="http://ditu.google.cn/maps/api/js?key=AIzaSyDiwY_5J2Bkv2UgSeJa4NOKl6WUezSS9XA"></script>--->
 <script type="text/javascript" src="js/plugins/highlight/highlight.pack.js"></script>
 <script type="text/javascript" src="js/plugins/jquery.mCustomScrollbar.min.js"></script>
 <script type="text/javascript" src="js/plugins/isotope.pkgd.min.js"></script>
